k8s/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: _APP_NAME
  name: _APP_NAME
  namespace: _NAMESPACE
spec:
  replicas: _REPLICAS
  selector:
    matchLabels:
      app: _APP_NAME
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: _APP_NAME
    spec:
      containers:
      - image: _AWS_ACCOUNT_ID.dkr.ecr._AWS_DEFAULT_REGION.amazonaws.com/_IMAGE_REPO:IMAGE_TAG
        imagePullPolicy: Always
        name: _APP_NAME
        ports:
        - containerPort: _APP_PORT
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: _APP_NAME
  name: _APP_NAME
  namespace: _NAMESPACE
spec:
  ports:
  - port: _APP_PORT
    protocol: TCP
    targetPort: _APP_PORT
    name: _PROTOCOL_HTTP
  selector:
    app: _APP_NAME
  type: ClusterIP

---
