k8s/stage-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    kubernetes.io/ingress.class: "nginx"  
    certmanager.io/issuer: "letsencrypt-prod"
  name: stage-ingress
spec:
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    - ac09b1eb8e3134acc9af2f499ca74f93-1508947392.us-east-2.elb.amazonaws.com
    secretName: tls-secret-be # < cert-manager will store the created certificate in this secret.
  rules:
  - host: ac09b1eb8e3134acc9af2f499ca74f93-1508947392.us-east-2.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: shopdesk-react
          servicePort: 3000
        path: /
